--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -63,7 +63,7 @@
     }
 
     inputs.forEach(input => input.addEventListener('change', handleUpdate)); //adds event listener to each input and calls handleUpdate on change
-    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
+    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate)); //
   </script>
 
 </body>
